--- a/index.html
+++ b/index.html
@@ -21,5 +21,6 @@
       <img id="hero-img" src="http://orig13.deviantart.net/8df9/f/2016/244/2/c/raptor_ball___caveman_attack_by_skazdal-dag3y0h.gif" alt="" />
     </div>
   </div>
-
+    <script src="js/app.js"></script>
 </body>
+</html>
