Linked main.css
also rephrased title tag content

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Hunter Clicker: a game on Optimal Foraging Theory</title>
+    <title>Hunter Clicker: a game inspired by Optimal Foraging Theory</title>
+    <link rel="stylesheet" type="text/css" href="css/main.css" media="screen" />
 </head>
 <body>
   
